--- a/resources/views/templates/default.twig
+++ b/resources/views/templates/default.twig
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Self Destructing App</title>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
 </head>
 <body>
-{% block content %}
+	<div class="container">
+	{% block content %}
 
-{% endblock %}
+	{% endblock %}
+	</div>
 </body>
 </html>
